--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
+    "axios": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
