--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -251,6 +251,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation('org.conscrypt:conscrypt-android:2.0.0')
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
