--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
+    "mime": "^3.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
