--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mime": "^3.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-hr-component": "^2.0.3",
     "react-native-image-picker": "^4.10.2",
